# nvidia-nemotron

./: .gitignore  README.md  pyproject.toml  requirements-kaggle.txt
docs/: competition_notes.md  discussion_findings.md  kaggle_t4_training.md  next_training_recipe.md  project_plan.md  submission_checklist.md
scripts/: create_lookup_submission.py  create_noop_adapter.py  generate_synthetic.py  inspect_data.py  package_adapter_submission.py  package_submission.py  submit_to_kaggle.py  train_lora.py  validate_adapter_submission.py
src/nemotron_challenge/: __init__.py  paths.py  scoring.py  synthetic.py
tests/: test_scoring.py
