[project]
name = "nemotron-reasoning-challenge"
version = "0.1.0"
description = "Research scaffold for the NVIDIA Nemotron Model Reasoning Challenge"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.20.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "rich>=13.7.0",
    "safetensors>=0.4.3",
    "typer>=0.12.0",
]

[project.optional-dependencies]
train = [
    "accelerate>=0.33.0",
    "bitsandbytes>=0.43.0; platform_system != 'Windows'",
    "peft>=0.12.0",
    "transformers>=4.44.0",
    "trl>=0.9.0",
]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
